--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: cDuels
 version: '${project.version}'
 main: xyz.atomdev.cduels.CDuels
 author: Crystal Development Team
+softdepend:
+  - PlaceholderAPI
